--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clappr/player": "^0.5.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
+    "react-refresh": "^0.14.0",
     "react-router-dom": "^6.18.0",
     "video.js": "^8.6.1"
   },
